--- a/L1/code/data_distance.ipynb
+++ b/L1/code/data_distance.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,191 +81,31 @@
   },
   {
    "source": [
-    "## p1 to p2 ##"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "df_2 = df.drop(['p3', 'p4', 'p5', 'p6', 'p7', 'p8'], axis=1).dropna()"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": 27,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "man_dist.append(cityblock(df_2.p1.astype(float), df_2.p2.astype(float)))\n",
-    "euc_dist.append(euclidean(df_2.p1.astype(float), df_2.p2.astype(float)))\n",
-    "kow_dist.append(minkowski(df_2.p1.astype(float), df_2.p2.astype(float), p=4))"
-   ]
-  },
-  {
-   "source": [
-    "## p1 to p3 ##"
+    "## distances ##"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_3 = df.drop(['p2', 'p4', 'p5', 'p6', 'p7', 'p8'], axis=1).dropna()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "man_dist.append(cityblock(df_3.p1.astype(float), df_3.p3.astype(float)))\n",
-    "euc_dist.append(euclidean(df_3.p1.astype(float), df_3.p3.astype(float)))\n",
-    "kow_dist.append(minkowski(df_3.p1.astype(float), df_3.p3.astype(float), p=4))"
-   ]
-  },
-  {
-   "source": [
-    "## p1 to p4 ##"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_4 = df.drop(['p2', 'p3', 'p5', 'p6', 'p7', 'p8'], axis=1).dropna()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "man_dist.append(cityblock(df_4.p1.astype(float), df_4.p4.astype(float)))\n",
-    "euc_dist.append(euclidean(df_4.p1.astype(float), df_4.p4.astype(float)))\n",
-    "kow_dist.append(minkowski(df_4.p1.astype(float), df_4.p4.astype(float), p=4))"
-   ]
-  },
-  {
-   "source": [
-    "## p1 to p5 ##"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_5 = df.drop(['p2', 'p3', 'p4', 'p6', 'p7', 'p8'], axis=1).dropna()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "man_dist.append(cityblock(df_5.p1.astype(float), df_5.p5.astype(float)))\n",
-    "euc_dist.append(euclidean(df_5.p1.astype(float), df_5.p5.astype(float)))\n",
-    "kow_dist.append(minkowski(df_5.p1.astype(float), df_5.p5.astype(float), p=4))"
-   ]
-  },
-  {
-   "source": [
-    "## p1 to p6 ##"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_6 = df.drop(['p2', 'p3', 'p4', 'p5', 'p7', 'p8'], axis=1).dropna()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "man_dist.append(cityblock(df_6.p1.astype(float), df_6.p6.astype(float)))\n",
-    "euc_dist.append(euclidean(df_6.p1.astype(float), df_6.p6.astype(float)))\n",
-    "kow_dist.append(minkowski(df_6.p1.astype(float), df_6.p6.astype(float), p=4))"
-   ]
-  },
-  {
-   "source": [
-    "## p1 to p7 ##"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_7 = df.drop(['p2', 'p3', 'p4', 'p5', 'p6', 'p8'], axis=1).dropna()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "man_dist.append(cityblock(df_7.p1.astype(float), df_7.p7.astype(float)))\n",
-    "euc_dist.append(euclidean(df_7.p1.astype(float), df_7.p7.astype(float)))\n",
-    "kow_dist.append(minkowski(df_7.p1.astype(float), df_7.p7.astype(float), p=4))"
-   ]
-  },
-  {
-   "source": [
-    "## p1 to p8 ##"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_8 = df.drop(['p2', 'p3', 'p4', 'p5', 'p6', 'p7'], axis=1).dropna()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "man_dist.append(cityblock(df_8.p1.astype(float), df_8.p8.astype(float)))\n",
-    "euc_dist.append(euclidean(df_8.p1.astype(float), df_8.p8.astype(float)))\n",
-    "kow_dist.append(minkowski(df_8.p1.astype(float), df_8.p8.astype(float), p=4))"
+    "for col in df.columns[2:]:\n",
+    "    cur = df[['p1', col]].dropna()\n",
+    "    _from = [float(i) for i in cur['p1'].values]\n",
+    "    _to = [float(i) for i in cur[col].values]\n",
+    "    man_dist.append(cityblock(_from, _to))\n",
+    "    euc_dist.append(euclidean(_from, _to))\n",
+    "    kow_dist.append(minkowski(_from, _to, p=4))"
    ]
   },
   {
@@ -277,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
