--- a/L1/code/data_distance.ipynb
+++ b/L1/code/data_distance.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,61 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "man_dist = list()\n",
-    "euc_dist = list()\n",
-    "kow_dist = list()"
-   ]
-  },
-  {
-   "source": [
-    "## distances ##"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for col in df.columns[2:]:\n",
-    "    cur = df[['p1', col]].dropna()\n",
-    "    _from = [float(i) for i in cur['p1'].values]\n",
-    "    _to = [float(i) for i in cur[col].values]\n",
-    "    man_dist.append(cityblock(_from, _to))\n",
-    "    euc_dist.append(euclidean(_from, _to))\n",
-    "    kow_dist.append(minkowski(_from, _to, p=4))"
-   ]
-  },
-  {
-   "source": [
-    "## results ##"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "--------------------------------------------------------\n\t Manhattan \t Euclidean \t Minkowski (p=4)\n--------------------------------------------------------\np1-p2 \t 9.0 \t\t 4.3 \t\t 3.22\np1-p3 \t 4.5 \t\t 2.4 \t\t 1.83\np1-p4 \t 9.0 \t\t 4.42 \t\t 3.3\np1-p5 \t 5.0 \t\t 2.74 \t\t 2.17\np1-p6 \t 9.5 \t\t 4.66 \t\t 3.45\np1-p7 \t 8.0 \t\t 4.12 \t\t 3.06\np1-p8 \t 3.5 \t\t 1.66 \t\t 1.22\n--------------------------------------------------------\n"
+      "--------------------------------------------------------\n\t Manhattan \t Euclidean \t Minkowski (p=4)\n--------------------------------------------------------\np1-p8 \t 9.0 \t\t 4.3 \t\t 3.22\np1-p8 \t 4.5 \t\t 2.4 \t\t 1.83\np1-p8 \t 9.0 \t\t 4.42 \t\t 3.3\np1-p8 \t 5.0 \t\t 2.74 \t\t 2.17\np1-p8 \t 9.5 \t\t 4.66 \t\t 3.45\np1-p8 \t 8.0 \t\t 4.12 \t\t 3.06\np1-p8 \t 3.5 \t\t 1.66 \t\t 1.22\n--------------------------------------------------------\n"
      ]
     }
    ],
@@ -132,17 +85,16 @@
     "print('-'*56)\n",
     "print('\\t', 'Manhattan', '\\t', 'Euclidean', '\\t', 'Minkowski (p=4)')\n",
     "print('-'*56)\n",
-    "for i in range(7):\n",
-    "    print(f'p1-p{i+2}', '\\t', man_dist[i], '\\t\\t', round(euc_dist[i], 2), '\\t\\t', round(kow_dist[i], 2))\n",
-    "print('-'*56)\n"
+    "for col in df.columns[2:]:\n",
+    "    cur = df[['p1', col]].dropna()\n",
+    "    _from = [float(i) for i in cur['p1'].values]\n",
+    "    _to = [float(i) for i in cur[col].values]\n",
+    "    print(f'p1-p{i+2}', '\\t', \n",
+    "        cityblock(_from, _to), '\\t\\t', \n",
+    "        round(euclidean(_from, _to), 2), '\\t\\t', \n",
+    "        round(minkowski(_from, _to, p=4), 2))\n",
+    "print('-'*56)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
